gs101: Enable battery stats defender
* required in integrating adaptive (ACA) and smart battery charging to frameworks

Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>
Signed-off-by: BarbaTech <ageuqx@gmail.com>

--- a/conf/init.gs101.rc
+++ b/conf/init.gs101.rc
@@ -836,7 +836,7 @@ on  property:persist.sys.test_harness=1 && property:persist.vendor.testing_batte
     setprop persist.vendor.charge.start.level 0
     setprop vendor.battery.defender.disable 1
 
-# ACA (Adaptice Charge Always On) persist properties
+# ACA (Adaptive Charge Always On) persist properties (-1)
 on property:persist.vendor.adaptive.charge.soc=*
     write /sys/class/power_supply/battery/charge_limit ${persist.vendor.adaptive.charge.soc}
 
